<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SuggestPage">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_pick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                android:clickable="true"
                android:contentDescription="@string/pick_image"
                android:elevation="4dp"
                android:focusable="true"
                android:outlineSpotShadowColor="@color/black"
                android:padding="7dp"
                android:src="@drawable/ic_flower"
                tools:targetApi="p" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:elevation="0dp"
                app:counterEnabled="true"
                app:counterMaxLength="40">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:backgroundTint="#4545"
                    android:fontFamily="@font/balsamiq_sans"
                    android:shadowRadius="3"
                    android:hint="@string/title_suggest"
                    android:text="@string/title_add"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/story"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:elevation="0dp"
                app:counterEnabled="true"
                app:counterMaxLength="5000">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:backgroundTint="#4545"
                    android:fontFamily="@font/balsamiq_sans"
                    android:shadowRadius="3"
                    android:hint="@string/story"
                    android:text="@string/write_your_blog_body_here"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="0dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/camera_pick"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="60dp"
                    android:background="@color/black"
                    android:clickable="true"
                    android:backgroundTint="@color/ic_launcher_background"
                    android:contentDescription="@string/title_camera"
                    android:padding="10dp"
                    android:src="@drawable/ic_camera"
                    android:focusable="true" />

                <ImageButton
                    android:id="@+id/gallery_pick"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="60dp"
                    android:background="@color/black"
                    android:clickable="true"
                    android:backgroundTint="@color/ic_launcher_background"
                    android:contentDescription="@string/title_gallery"
                    android:src="@drawable/ic_gallery"
                    android:focusable="true" />
            </LinearLayout>

            <Button
                android:id="@+id/suggest_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="10dp"
                android:layout_marginTop="17dp"
                android:padding="10dp"
                android:text="@string/add_to_blog" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>