<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#52B5EDF4"
    tools:context=".ForgetPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintCircleRadius="2dp"
        android:layout_marginHorizontal="5dp"
        android:elevation="@dimen/cardview_compat_inset_shadow"
        android:gravity="center">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_registered_email"
            android:fontFamily="@font/balsamiq_sans"
            android:textSize="20sp"
            android:textStyle="bold"
            android:selectAllOnFocus="true"
            android:layout_marginHorizontal="11dp"
            android:elevation="4dp"/>

        <EditText
            android:id="@+id/editEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:ems="10"
            android:outlineSpotShadowColor="@color/black"
            android:padding="15dp"
            android:height="@dimen/cardview_compat_inset_shadow"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify"
            android:layout_marginVertical="20dp"
            android:padding="15dp"
            android:backgroundTint="#108715"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>