<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AddSuggestion">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFDCFBF7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:elevation="4dp"
                android:scaleType="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_flower"
                tools:ignore="ImageContrastCheck" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="5dp"
                app:cardCornerRadius="2dp"
                android:padding="5dp"
                android:outlineSpotShadowColor="@color/black"
                android:layout_marginHorizontal="0.025dp"
                android:layout_marginVertical="20dp"
                android:backgroundTint="#7CD5D0D0"
                >
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blog_body"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="@integer/material_motion_duration_long_1"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginVertical="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView"
                    android:fontFamily="serif"/>
            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:id="@+id/accept_btn"
                android:layout_height="wrap_content"
                android:text="@string/accept"
                android:layout_marginHorizontal="5dp"
                android:padding="12dp"
                android:fontFamily="@font/balsamiq_sans"
                android:backgroundTint="#4CAF50"/>


            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:id="@+id/reject_btn"
                android:layout_height="wrap_content"
                android:text="@string/reject"
                android:layout_marginHorizontal="5dp"
                android:padding="12dp"
                android:fontFamily="@font/balsamiq_sans"
                android:backgroundTint="#F44336"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>